Bug 1576204 - Set remote flag in nsWindow for e10s. r=kmag,snorp

Chrome flags need to be set both on the `window` and the `browser` object.
Right now we only set them on the `browser` objects and that could lead to
unintended consequences. This patch sets the flags to the `window` accordingly.

Differential Revision: https://phabricator.services.mozilla.com/D43523